istio-features/dark-release/virtual-service-dark-release.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: demo-webapp
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.loc"   # Domain name of the external website



---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-application-dark-release
  namespace: demo-webapp
spec:
  hosts:
  - myapp.loc
  gateways:
    - ingress-gateway-configuration
  http:
  - match:
    - uri:
        prefix: /
      headers:
        cookie:
          regex: ^(.*?;)?(version=V2)(;.*)?$
    route:
    - destination:
        host: web.demo-webapp.svc.cluster.local
        subset: version2
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web.demo-webapp.svc.cluster.local
        subset: version1

---


kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: webapp-destination-rule
  namespace: demo-webapp
spec:
  host: web.demo-webapp.svc.cluster.local
  subsets:
    - labels:
        version: V1
      name: version1
    - labels:
        version: V2
      name: version2
